# XXIpCamera

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/muto/xxipcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_egl.xml  activity_fullscreen.xml  activity_main.xml  activity_main_framelayout.xml  activity_surface_texture.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libjin/: proguard-rules.pro
libjin/src/main/: AndroidManifest.xml
libjin/src/main/java/org/webrtc/: EglBase10.java  EglBase14.java  EglRenderer.java  GlRectDrawer.java  GlShader.java  GlTextureFrameBuffer.java  GlUtil.java  RendererCommon.java  SurfaceTextureHelper.java  SurfaceViewRenderer.java  ThreadUtils.java  VideoRenderer.java  YuvConverter.java
libjin/src/main/res/values/: strings.xml
xxcam/: CMakeLists.txt  build.gradle  proguard-rules.pro
xxcam/src/androidTest/java/com/mut0/xxcam/: ExampleInstrumentedTest.java
xxcam/src/main/: AndroidManifest.xml
xxcam/src/main/cpp/: CMakeLists.txt  amf.cpp  amf.h  native-lib.cpp  rtmp.cpp  rtmp.h  test.cpp  xx_amf.cpp  xx_amf.h  xx_buf.cpp  xx_buf.h  xx_connection.cpp  xx_connection.h  xx_core.h  xx_flv.cpp  xx_flv.h  xx_handshake.cpp  xx_io.cpp  xx_io.h  xx_jni.cpp  xx_log.h  xx_netstream.cpp  xx_netstream.h  xx_pool.cpp  xx_pool.h  xx_publish.cpp  xx_publish.h  xx_rtmp.cpp  xx_rtmp.h  xx_rtmp_handshake.cpp  xx_session.cpp  xx_session.h  xx_stream.cpp  xx_stream.h  xxbuf.cpp  xxbuf.h  xxcore.h  xxio.cpp  xxio.h
xxcam/src/main/cpp/api/: xx_api.h
xxcam/src/main/cpp/bokeh/: bokeh_jni.c
xxcam/src/main/cpp/test/: CMakeLists.txt  test.cpp
xxcam/src/main/java/com/mut0/xxcam/: BokehPreview.java  BokehSnapshot.java  BokehSnapshotListener.java  ImageSaver.java  Native.java  RefCountedAutoCloseable.java  XXAEncoder.java  XXCamTextureView.java  XXCamera.java  XXCommander.java  XXFlvMux.java  XXMicroPhone.java  XXNative.java  XXRtmpPublish.java  XXVEncoder.java
xxcam/src/main/java/mut0/utils/: XXLog.java
xxcam/src/main/java/org/webrtc/: EglBase.java  EglBase14.java  Logging.java
xxcam/src/test/java/com/mut0/xxcam/: ExampleUnitTest.java
xxcam2/: CMakeLists.txt  build.gradle
xxcam2/src/androidTest/java/com/mut0/xxcam2/: ExampleInstrumentedTest.java
xxcam2/src/main/: AndroidManifest.xml
xxcam2/src/main/cpp/: native-lib.cpp
xxcam2/src/main/java/com/mut0/xxcam2/: XXAEncoder.java  XXCamera2.java  XXFlvMux.java  XXMicroPhone.java  XXRtmpPublish.java  XXVEncoder.java
xxcam2/src/main/res/values/: strings.xml
xxcam2/src/test/java/com/mut0/xxcam2/: ExampleUnitTest.java
(+6 files in other folders)
